[gd_scene load_steps=12 format=3 uid="uid://d0ausrmh8y0is"]

[ext_resource type="Theme" uid="uid://bhs76hnulf3s4" path="res://assets/misc/main_theme.tres" id="1_a00vs"]
[ext_resource type="Script" path="res://scences/card_ui/card_ui.gd" id="2_wujgf"]
[ext_resource type="Script" path="res://scences/card_ui/card_state_machine.gd" id="3_f5274"]
[ext_resource type="StyleBox" uid="uid://ck3105wj7dcrn" path="res://scences/card_ui/card_base_stylebox.tres" id="3_fe3uj"]
[ext_resource type="Texture2D" uid="uid://bfvi02kojsa00" path="res://assets/art/objects/tile_0103.png" id="3_yjm4a"]
[ext_resource type="Script" path="res://scences/card_ui/card_states/card_base_state.gd" id="4_b02p2"]
[ext_resource type="Script" path="res://scences/card_ui/card_states/card_clicked_state.gd" id="5_pbn7t"]
[ext_resource type="Script" path="res://scences/card_ui/card_states/card_dragging_state.gd" id="6_iqna7"]
[ext_resource type="Script" path="res://scences/card_ui/card_states/card_released_state.gd" id="7_0dqht"]
[ext_resource type="Script" path="res://scences/card_ui/card_states/card_aiming_state.gd" id="8_hu8b7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_245v2"]
size = Vector2(45, 57)

[node name="CardUI" type="Control"]
custom_minimum_size = Vector2(40, 50.4)
layout_mode = 3
anchors_preset = 0
offset_right = 34.5
offset_bottom = 42.0
theme = ExtResource("1_a00vs")
script = ExtResource("2_wujgf")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 5.0
offset_bottom = 6.6
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = ExtResource("3_fe3uj")

[node name="Cost" type="Label" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 7.0
offset_right = 46.0
offset_bottom = 17.0
text = "2"
vertical_alignment = 1

[node name="Type" type="Label" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 7.0
offset_right = 47.0
offset_bottom = 17.0
text = "2"
vertical_alignment = 1

[node name="Icon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -23.2
offset_right = 7.0
offset_bottom = -23.2
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.1, 1.1)
mouse_filter = 2
texture = ExtResource("3_yjm4a")
expand_mode = 1
stretch_mode = 5

[node name="Desc" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 17.0
offset_right = 5.0
offset_bottom = 8.6
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/line_spacing = 1
theme_override_font_sizes/font_size = 6
text = "Attack 3
Draw 12"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Name" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 2.0
offset_right = 4.0
offset_bottom = -19.4
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 6
text = "Repurposing hiya"
horizontal_alignment = 1
autowrap_mode = 3

[node name="DropPointDetector" type="Area2D" parent="."]
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DropPointDetector"]
visible = false
position = Vector2(22.5, 28.5)
shape = SubResource("RectangleShape2D_245v2")

[node name="CardStateMachine" type="Node" parent="." node_paths=PackedStringArray("inital_state")]
unique_name_in_owner = true
script = ExtResource("3_f5274")
inital_state = NodePath("CardBaseState")

[node name="CardBaseState" type="Node" parent="CardStateMachine"]
script = ExtResource("4_b02p2")

[node name="CardClickedState" type="Node" parent="CardStateMachine"]
script = ExtResource("5_pbn7t")
state = 1

[node name="CardDraggingState" type="Node" parent="CardStateMachine"]
script = ExtResource("6_iqna7")
state = 2

[node name="CardReleasedState" type="Node" parent="CardStateMachine"]
script = ExtResource("7_0dqht")
state = 4

[node name="CardAimingState" type="Node" parent="CardStateMachine"]
script = ExtResource("8_hu8b7")
state = 3

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="area_entered" from="DropPointDetector" to="." method="_on_drop_point_detector_area_entered"]
[connection signal="area_exited" from="DropPointDetector" to="." method="_on_drop_point_detector_area_exited"]
